--- a/domino/domino.html
+++ b/domino/domino.html
@@ -7,7 +7,7 @@
     <!--<canvas id="myCanvas" width="100" height="200" style="border:1px solid #000000;">
 	</canvas> -->
     <label id="clock">0:00</label><br>
-    <label>Ingrese la suma: </label><input id="inputBox">
+    <label>Ingrese la suma: </label><input id="inputBox" type="number">
     <table align="center"
 	   id="domioTable"
 	   
