--- a/cartas/cartas.html
+++ b/cartas/cartas.html
@@ -1,15 +1,11 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
-    <LINK href="cartas.css" rel="stylesheet" type="text/css">
+    <TITLE>Cartas</Title>
   </head> 
-  <TITLE>Cartas</Title>
   <body>
     <label id="mistakesLeftLab">?</label><br>
-    <!--<table align="center"
-	   id="cardsTable"
-	   </table>-->
-    
 <script  src="cartas.js"></script>
 </body>
 </html>
