--- a/domino/domino.html
+++ b/domino/domino.html
@@ -1,16 +1,15 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <Title>Dominó</Title>
     <meta charset="UTF-8">
   </head> 
-  <TITLE>Dominó</Title>
   <body>
-    <!--<canvas id="myCanvas" width="100" height="200" style="border:1px solid #000000;">
-	</canvas> -->
     <label id="clock">0:00</label><br>
     <label>Ingrese la suma: </label><input id="inputBox" type="number">
     <table align="center"
 	   id="domioTable"
-	   
+	   >
 	   </table>
 <script  src="domino.js"></script>
 </body>
