--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
+    <TITLE>Juegos</Title>
   </head> 
-  <TITLE>Juegos</Title>
   <body>
     <a href="instantaneo/instantaneo.html">Instantáneo</a><br>
     <a href="domino/domino.html">Dominó</a><br>
     <a href="cartas/cartas.html">Cartas</a>
-      
-</body>
+    
+  </body>
 </html>
