--- a/instantaneo/instantaneo.html
+++ b/instantaneo/instantaneo.html
@@ -1,8 +1,9 @@
-<html>
+<!DOCTYPE html><html>
   <head>
+    <Title>Instantaneo</Title>
     <meta charset="UTF-8">
   </head> 
-  <TITLE>Instantaneo</Title>
-  <body></body>
-  <script  src="instantaneo.js"></script>
+  <body>
+    <script  src="instantaneo.js"></script>
+  </body>
 </html>
