prettier start screen

--- a/index.html
+++ b/index.html
@@ -5,9 +5,32 @@
     <TITLE>Juegos</Title>
   </head> 
   <body>
-    <a href="instantaneo/instantaneo.html">Instantáneo</a><br>
-    <a href="domino/domino.html">Dominó</a><br>
-    <a href="cartas/cartas.html">Cartas</a>
+    <table align=center>
+      <tr>
+	<td>
+	  <a href="instantaneo/instantaneo.html">Instantáneo</a><br>
+	  <img src="instantaneo/instantaneo.png">
+	</td>
+      </tr>
+
+      <tr>
+	<td>
+	  <a href="domino/domino.html">Dominó</a><br>
+	  <img src="domino/dominoes.jpg">
+	</td>
+      </tr>
+
+      <tr>
+	<td>
+	  <a href="cartas/cartas.html">Cartas</a><br>
+	  <img src="cartas/cartas.png">
+	</td>
+      </tr>
+    </table>
     
+	
+    <!-- <a href="domino/domino.html">Dominó</a><br>
+    <a href="cartas/cartas.html">Cartas</a>
+    -->
   </body>
 </html>
