include image in link

--- a/index.html
+++ b/index.html
@@ -8,29 +8,34 @@
     <table align=center>
       <tr>
 	<td>
-	  <a href="instantaneo/instantaneo.html">Instantáneo</a><br>
-	  <img src="instantaneo/instantaneo.png">
+	  <a href="instantaneo/instantaneo.html">
+	    Instantáneo<br>
+	    <img src="instantaneo/instantaneo.png">
+	  </a>
 	</td>
       </tr>
 
       <tr>
 	<td>
-	  <a href="domino/domino.html">Dominó</a><br>
-	  <img src="domino/dominoes.jpg">
+	  <a href="domino/domino.html">
+	    Dominó<br>
+	    <img src="domino/dominoes.jpg">
+	  </a>
 	</td>
       </tr>
 
       <tr>
 	<td>
-	  <a href="cartas/cartas.html">Cartas</a><br>
-	  <img src="cartas/cartas.png">
+	  <a href="cartas/cartas.html">Cartas
+	    <img src="cartas/cartas.png">
+	  </a><br>
 	</td>
       </tr>
     </table>
     
-	
+    
     <!-- <a href="domino/domino.html">Dominó</a><br>
-    <a href="cartas/cartas.html">Cartas</a>
-    -->
+	 <a href="cartas/cartas.html">Cartas</a>
+	 -->
   </body>
 </html>
